feat: implement user authentication module and CI setup
- Added DTOs for authentication (LoginDto, RegisterDto, JwtResponse, UserDto)
- Implemented User entity, Role enum, and CustomerDetails model
- Created UserMapper for DTO <-> Entity conversion
- Added UserRepository, IUserService interface, and UserService implementation
- Integrated JWT utilities for token generation and validation
- Configured Spring Security with custom SecurityConfig
- Introduced Flyway migration (v1_create_users_table.sql) for user schema
- Added CI workflow with GitHub Actions (test.yml)
- Added environment templates (env-template.example, env.env)
- Implemented integration tests for UserController
- Removed outdated placeholder test class

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,26 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.11.5</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.11.5</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -112,6 +132,31 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
+                    <output>file</output>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
